--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,11 @@
 
 main {
   background-color: #fafafa;
+  flex: 1 0 auto;
+}
+
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
