--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ footer.page-footer {
 }
 
 .action-call, .action-call > .col > .card-panel > a > h4 {
+  text-align: center;
   color: #ee6e73 !important;
 }
 
