--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,12 @@ footer.page-footer {
   left: 300;
 }
 
-.action-call > .material-icons {
-  text-align: center;
+.action-call > .card-panel > .material-icons {
   color: #ffab40;
+}
+
+.action-call {
+  text-align: center !important;
 }
 
 .primary-red {
