still tryna fix these icons

--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@ footer.page-footer {
   left: 300;
 }
 
-.action-call > .col > .card-panel > .material-icons {
-  color: #ffab40;
+.action-call > .col > .card-panel > a > .material-icons {
+  color: #ffab40 !important;
 }
 
 .action-call {
