--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ footer.page-footer {
   background-color: #ee6e73;
 }
 
+.orange-text {
+  color: #ffab40 !important;
+}
+
 .center-div {
   display: block;
   margin: 0 auto;
