mobile sidenav overlay

--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,9 @@ footer.page-footer {
   margin-top: 0;
 }
 
-#sidenav-overlay {
+/*#sidenav-overlay {
   left: 300;
-}
+}*/
 
 .action-call {
   text-align: center !important;
