--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ footer.page-footer {
   color: #ffab40 !important;
 }
 
-.footer-right+ul {
-  float: right;
+.footer-left+ul {
+  float: left;
 }
 
 .center-div {
